--- a/assets/djmquarto.scss
+++ b/assets/djmquarto.scss
@@ -13,11 +13,13 @@ $body-color: #495057 !default;
 
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville");
+@import url("https://fonts.googleapis.com/css2?family=Avenir");
 
 
 
-$font-family-sans-serif:  "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-serif: "EB Garamond",  Georgia, Cambria, "Times New Roman", Times, serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif: "Avenir", "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-serif: "Libre Baskerville", "EB Garamond",  Georgia, Cambria, "Times New Roman", Times, serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 /*-- scss:rules --*/
 
