--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,13 @@
 /* css styles */
 
 .about-entity .about-image {
-  margin-left: 4em;
+  margin-left: 4.5em;
 }
 
 .quarto-page-footer {
   white-space: nowrap;
+}
+
+footer.footer {
+  font-size: 0.9em;
 }
